--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,27 +7,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #1DB954; /* Spotify green */
+      background-image: url('/logo-spotify-icon-4096.png'); /* Replace with the path to your Spotify logo image */
+      background-size: cover;
+      background-position: center;
+      color: white; /* Set text color to white for better contrast */
+    }
+  </style>
 </head>
-<body>
+<body class="d-flex align-items-center justify-content-center" style="min-height: 100vh;">
 
-    <div class="container mt-4">
-        <h2 class="text-center mb-4">Home Page</h2>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col text-center">
+                <h2 class="mb-4">Home Page</h2>
+            </div>
+        </div>
 
-  <% if (user) { %>
-    <div class="user-info mt-4">
-      <img src="<%= user.photos[0].value %>" alt="User Photo" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
-      <p class="mt-2">Welcome, <%= user.displayName %>!</p>
-      <a href="/profile" class="btn btn-primary mt-2">Go to Profile</a>
+        <% if (user) { %>
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    <div class="user-info mt-4">
+                        <img src="<%= user.photos[0].value %>" alt="User Photo" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
+                        <p class="mt-2">Welcome, <%= user.displayName %>!</p>
+                        <a href="/profile" class="btn btn-primary mt-2">Go to Profile</a>
+                    </div>
+                </div>
+            </div>
+        <% } else { %>
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    <a href="/login" class="btn btn-success mt-4">Login with Spotify</a>
+                </div>
+            </div>
+        <% } %>
     </div>
-  <% } else { %>
-    <a href="/login" class="btn btn-success mt-4">Login with Spotify</a>
-  <% } %>
 
-</div>
-<!-- Add these lines to your HTML file(s) for Bootstrap JS and Popper.js -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Add these lines to your HTML file(s) for Bootstrap JS and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
+
+
+
+
+
