--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #1DB954; /* Spotify green */
+      background-image: url('/logo-spotify-icon-4096.png'); /* Replace with the path to your Spotify logo image */
+      background-size: cover;
+      background-position: center;
+      color: white; /* Set text color to white for better contrast */
+    }
+  </style>
 </head>
 <body class="d-flex align-items-center justify-content-center" style="min-height: 100vh;">
 
