--- a/views/youtube-profile.ejs
+++ b/views/youtube-profile.ejs
@@ -18,17 +18,24 @@
 <body>
 
 <!-- Display the user's profile picture -->
-<div id="profileName">
-    <h2 id="userName"></h2>
-    <img id="profilePicture" alt="User Profile Picture" style="width: 100px; height: 100px; object-fit: cover;">
+<div class="container mt-4 text-center">
+    <h2 class="text-center mb-4">YouTube Profile Page</h2>
+    <div class="row justify-content-center text-center">
+        <div class="col-md-4">
+            <div class="text-center">
+                <p class="mt-2" id="userName"></p>
+                <img id="profilePicture" alt="User Profile Picture" style="width: 100px; height: 100px; object-fit: cover;">
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Display the user's playlists -->
-<div>
-    <h2>YouTube Playlists</h2>
-    <ul id="playlistList"></ul>
+    <div>
+        <h2>YouTube Playlists</h2>
+        <ul id="playlistList"></ul>
+    </div>
 </div>
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -96,7 +103,8 @@
             // Update the playlistList element with playlist information
             const playlistList = document.getElementById('playlistList');
             playlistList.innerHTML = ''; // Clear previous content
-
+            const playListId = data.items.playListId;
+            
             if (data.items && data.items.length > 0) {
                 data.items.forEach(playlist => {
                     const playlistItem = document.createElement('li');
